--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>Gigm8 — Find Jobs, Match & Optimize Your Resume</title>
     <meta name="description" content="Search high-quality job listings worldwide, analyze your resume against any role, and use AI to optimize your resume in real time." />
     <meta name="keywords" content="jobs, job search, resume optimizer, ATS, AI resume, job board, career, hiring, remote jobs" />
@@ -14,13 +14,16 @@
     <meta property="og:url" content="https://jobspark.app/" />
     <meta property="og:title" content="Gigm8 — Find Jobs, Match & Optimize Your Resume" />
     <meta property="og:description" content="Search high-quality job listings worldwide, analyze your resume against any role, and use AI to optimize your resume in real time." />
-    <meta property="og:image" content="/placeholder.svg" />
+    <meta property="og:image" content="/thumbnail.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Gigm8 — Find Jobs, Match & Optimize Your Resume" />
     <meta name="twitter:description" content="Search high-quality job listings worldwide, analyze your resume against any role, and use AI to optimize your resume in real time." />
-    <meta name="twitter:image" content="/placeholder.svg" />
+    <meta name="twitter:image" content="/thumbnail.png" />
 
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.webmanifest" />
