--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#0ea5e9" />
+    <meta name="msapplication-TileColor" content="#0ea5e9" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>Gigm8 — Find Jobs, Match & Optimize Your Resume</title>
     <meta name="description" content="Search high-quality job listings worldwide, analyze your resume against any role, and use AI to optimize your resume in real time." />
@@ -11,19 +13,23 @@
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Gigm8" />
     <meta property="og:url" content="https://jobspark.app/" />
     <meta property="og:title" content="Gigm8 — Find Jobs, Match & Optimize Your Resume" />
     <meta property="og:description" content="Search high-quality job listings worldwide, analyze your resume against any role, and use AI to optimize your resume in real time." />
-    <meta property="og:image" content="/thumbnail.png" />
+    <meta property="og:image" content="https://jobspark.app/thumbnail.png" />
+    <meta property="og:image:secure_url" content="https://jobspark.app/thumbnail.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Gigm8 – AI job search and resume optimization" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Gigm8 — Find Jobs, Match & Optimize Your Resume" />
     <meta name="twitter:description" content="Search high-quality job listings worldwide, analyze your resume against any role, and use AI to optimize your resume in real time." />
-    <meta name="twitter:image" content="/thumbnail.png" />
+    <meta name="twitter:image" content="https://jobspark.app/thumbnail.png" />
+    <meta name="twitter:image:alt" content="Gigm8 – AI job search and resume optimization" />
 
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.webmanifest" />
