feat: GA tag, SPA route tracking, mobile-friendly job cards; domain switch to gigm8.com; sitemap/robots updates; DOCX export; Applied Jobs page

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <title>Gigm8 — Find Jobs, Match & Optimize Your Resume</title>
     <meta name="description" content="Search high-quality job listings worldwide, analyze your resume against any role, and use AI to optimize your resume in real time." />
     <meta name="keywords" content="jobs, job search, resume optimizer, ATS, AI resume, job board, career, hiring, remote jobs" />
-    <link rel="canonical" href="https://jobspark.app/" />
+    <link rel="canonical" href="https://gigm8.com/" />
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Gigm8" />
-    <meta property="og:url" content="https://jobspark.app/" />
+    <meta property="og:url" content="https://gigm8.com/" />
     <meta property="og:title" content="Gigm8 — Find Jobs, Match & Optimize Your Resume" />
     <meta property="og:description" content="Search high-quality job listings worldwide, analyze your resume against any role, and use AI to optimize your resume in real time." />
-    <meta property="og:image" content="https://jobspark.app/thumbnail.png" />
-    <meta property="og:image:secure_url" content="https://jobspark.app/thumbnail.png" />
+    <meta property="og:image" content="https://gigm8.com/thumbnail.png" />
+    <meta property="og:image:secure_url" content="https://gigm8.com/thumbnail.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -28,7 +28,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Gigm8 — Find Jobs, Match & Optimize Your Resume" />
     <meta name="twitter:description" content="Search high-quality job listings worldwide, analyze your resume against any role, and use AI to optimize your resume in real time." />
-    <meta name="twitter:image" content="https://jobspark.app/thumbnail.png" />
+    <meta name="twitter:image" content="https://gigm8.com/thumbnail.png" />
     <meta name="twitter:image:alt" content="Gigm8 – AI job search and resume optimization" />
 
     <!-- PWA Manifest -->
@@ -40,8 +40,8 @@
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "Gigm8",
-        "url": "https://jobspark.app/",
-        "logo": "https://jobspark.app/favicon.ico",
+        "url": "https://gigm8.com/",
+        "logo": "https://gigm8.com/favicon.ico",
         "sameAs": [
           "https://twitter.com/",
           "https://www.linkedin.com/"
@@ -54,13 +54,22 @@
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "Gigm8",
-        "url": "https://jobspark.app/",
+        "url": "https://gigm8.com/",
         "potentialAction": {
           "@type": "SearchAction",
-          "target": "https://jobspark.app/?q={search_term_string}",
+          "target": "https://gigm8.com/?q={search_term_string}",
           "query-input": "required name=search_term_string"
         }
       }
+    </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KP3WCTFTM1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-KP3WCTFTM1');
     </script>
   </head>
   <body>
