--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
 
       gtag('config', 'G-KP3WCTFTM1');
     </script>
+
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7645254342055065"
+            crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
