--- a/index.html
+++ b/index.html
@@ -119,11 +119,33 @@
     </script>
 
     <!-- Google AdSense -->
+    <!-- Hotjar Tracking Code for gigm8 -->
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:6525768,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7645254342055065"
             crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- Google AdSense Display Ad -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-7645254342055065"
+         data-ad-slot="2293174460"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
